# reg

./: Brzozowski.hs  DFA.hs  LICENSE  Regexp.hs  re.cabal  regexp.hs
src/: Antimirov.hs  Brzozowski.hs  DFA.hs  RegEx.hs  Regex.hs
